oxiplate-derive/tests/broken/for/for-no-expression.stderr
error: Expected an expression after prefix operator
 --> tests/broken/for/for-no-expression.rs:4:39
  |
4 | #[oxiplate_inline("{%- for number in -%}{{ number }} + {{ number_to_add }} = {{ numb + number_to_add }}{% endfor %}")]
  |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
